--- a/music_recommendation_app/templates/index.html
+++ b/music_recommendation_app/templates/index.html
@@ -175,7 +175,7 @@
 </head>
 <body>
     <header>
-        <!-- 로고 링크는 이제 메인 랜딩 페이지로 이동합니다. -->
+        <!-- 로고 링크는 메인 랜딩 페이지로 이동합니다. -->
         <a href="/" class="logo-link">
             <img src="{{ url_for('static', filename='logo.png') }}" alt="로고" class="logo-image" onerror="this.src='https://placehold.co/50x50/cccccc/000000?text=Logo'; this.alt='로고 (이미지 없음)';" />
         </a>
@@ -191,7 +191,7 @@
             <a href="/recommendation/analyze" class="start-button">감정 분석 시작</a>
         </div>
 
-        <!-- 메인 랜딩 페이지로 돌아가는 버튼 추가 -->
+        <!-- 메인 페이지로 돌아가는 버튼 추가 -->
         <div class="navigation-buttons">
             <a href="/" class="nav-button">메인 페이지로 돌아가기</a>
         </div>
