--- a/music_recommendation_app/templates/recommend_result_page.html
+++ b/music_recommendation_app/templates/recommend_result_page.html
@@ -409,8 +409,8 @@
             <div class="actions">
                 <!-- "다시 해보기" 버튼은 음악 추천 앱의 메인 페이지로 이동 -->
                 <button class="action-button" onclick="location.href='/recommendation'">다시 해보기</button>
-                <!-- "홈으로 이동하기" 버튼 추가 -->
-                <a href="/" class="home-button">홈으로 이동하기</a>
+                <!-- "메인 페이지로 돌아가기" 버튼 추가 -->
+                <a href="/" class="home-button">메인 페이지로 돌아가기</a>
             </div>
         </div>
     </main>
