--- a/music_genre_app/templates/index.html
+++ b/music_genre_app/templates/index.html
@@ -270,7 +270,7 @@
 </head>
 <body>
     <header>
-        <!-- 로고 링크는 이제 메인 랜딩 페이지로 이동합니다. -->
+        <!-- 로고 링크는 메인 랜딩 페이지로 이동합니다. -->
         <a href="/" class="logo-link">
             <img src="{{ url_for('static', filename='logo.png') }}" alt="로고" class="logo-image" onerror="this.src='https://placehold.co/50x50/cccccc/000000?text=Logo'; this.alt='로고 (이미지 없음)';" />
         </a>
@@ -297,7 +297,7 @@
             <p>업로드하신 WAV 파일은 분석을 위해 **자동으로 앞부분 30초로 잘라내어** 사용됩니다.</p>
         </div>
 
-        <!-- 메인 랜딩 페이지로 돌아가는 버튼 추가 -->
+        <!-- 메인 페이지로 돌아가는 버튼 추가 -->
         <div class="navigation-buttons">
             <a href="/" class="nav-button">메인 페이지로 돌아가기</a>
         </div>
