--- a/music_genre_app/templates/index.html
+++ b/music_genre_app/templates/index.html
@@ -271,7 +271,7 @@
 <body>
     <header>
         <!-- 로고 링크는 메인 랜딩 페이지로 이동합니다. -->
-        <a href="/" class="logo-link">
+        <a href="http://127.0.0.1:8000" class="logo-link">
             <img src="{{ url_for('static', filename='logo.png') }}" alt="로고" class="logo-image" onerror="this.src='https://placehold.co/50x50/cccccc/000000?text=Logo'; this.alt='로고 (이미지 없음)';" />
         </a>
     </header>
@@ -299,7 +299,7 @@
 
         <!-- 메인 페이지로 돌아가는 버튼 추가 -->
         <div class="navigation-buttons">
-            <a href="/" class="nav-button">메인 페이지로 돌아가기</a>
+            <a href="http://127.0.0.1:8000" class="nav-button">메인 페이지로 돌아가기</a>
         </div>
     </main>
 
