--- a/templates/main_landing_page.html
+++ b/templates/main_landing_page.html
@@ -164,7 +164,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 음잘딱깔센</p>
+        <p>&copy; 2025 음잘딱깔센 | Powered by <a href="https://api.getsong.co/" target="_blank">getsong.co</a></p>
     </footer>
 
     <script>
