--- a/music_genre_app/templates/index.html
+++ b/music_genre_app/templates/index.html
@@ -294,7 +294,7 @@
         <div id="error-message-display"></div>
         <div id="file-format-info">
             <p><strong>참고:</strong> 이 서비스는 <strong>WAV 파일만 지원</strong>합니다.</p>
-            <p>업로드하신 WAV 파일은 분석을 위해 **자동으로 앞부분 30초로 잘라내어** 사용됩니다.</p>
+            <p>업로드하신 WAV 파일은 분석을 위해 <strong>자동으로 앞부분 30초로 잘라내어</strong> 사용됩니다.</p>
         </div>
 
         <!-- 메인 페이지로 돌아가는 버튼 추가 -->
