--- a/music_recommendation_app/templates/recommend_loading_page.html
+++ b/music_recommendation_app/templates/recommend_loading_page.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>음악 추천 중... | 음잘딱깔센</title>
-  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico', v='1') }}" type="image/x-icon">
   <style>
     body {
       margin: 0;
